2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	Backport from mainline.
	2010-07-17  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/44805
	* config/pa/pa.h (CONSTANT_ALIGNMENT): Align strings to BITS_PER_WORD
	on all targets.

2010-08-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45109
	* tree-ssa-structalias.c (get_constraint_for_component_ref):
	Explicitly strip handled components and indirect references.

2010-08-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR boehm-gc/34544
	* gthr-posix.h (__gthread_start): Delete.
	(__gthread_active_init): Use pthread_default_stacksize_np instead of
	pthread_create to determine if hpux pthreads are active.
	* gthr-posix95.h (__gthread_start): Delete.
	(__gthread_active_init): Likewise use pthread_default_stacksize_np.

2010-08-06  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/44942
	* config/sparc/sparc.c (function_arg_advance): Always take into account
	the padding, if any.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* expmed.c (expand_mult_const) <case alg_shift>: Expand shift into
	temporary. Emit move from temporary to accum, so REG_EQUAL note will
	be attached to this insn in correct mode.

2010-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_decompose_address): Check for SI_REG
	using REGNO of base_reg directly.

2010-08-04  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.c (spu_emit_branch_hint): Do not access NOTE_KIND of
	non-NOTE insns.

2010-07-28  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	Backport from mainline:
	2010-04-03  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42509
	* alias.c (nonoverlapping_memrefs_p): For spill-slot accesses
	require a non-NULL MEM_OFFSET.

2010-07-27  Richard Guenther  <rguenther@suse.de>

	PR c/44555
	* c-common.c (c_common_truthvalue_conversion): Remove
	premature and wrong optimization concering ADDR_EXPRs.

2010-07-27  Richard Guenther  <rguenther@suse.de>
