@@ -1,3 +1,9 @@
+2010-08-10  Steve Ellcey  <sje@cup.hp.com>
+
+	Backport from mainline:
+	PR middle-end/41551
+	* gcc.dg/pr41551.c: New test.
+
 2010-08-08  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/45109
